Ensure license is correctly marked as GPLv2+
Also fixes assorted out of date setup.py information

Bug: 985174
Change-Id: I512be50762972cdcc752c16f58688ec61f2b859f

--- a/Client/setup.py.in
+++ b/Client/setup.py.in
@@ -14,6 +14,7 @@ def bash_completion_dir():
 setup(
     name = "bkr.client",
     version = "@VERSION@",
+    license = "GPLv2+",
 
     packages=find_packages('src'),
     package_dir = {'':'src'},
@@ -22,6 +23,13 @@ setup(
 
     data_files = [
         (bash_completion_dir(), ['bash-completion/bkr']),
+    ],
+
+    classifiers = [
+        'Development Status :: 5 - Production/Stable',
+        'Operating System :: POSIX :: Linux',
+        'Programming Language :: Python',
+        'License :: OSI Approved :: GNU General Public License (GPL)',
     ],
 
     entry_points = {
