--- a/LabController/setup.py.in
+++ b/LabController/setup.py.in
@@ -4,6 +4,7 @@ from glob import glob
 setup(
     name = "bkr.labcontroller",
     version = "@VERSION@",
+    license = "GPLv2+",
 
     packages=find_packages('src'),
     package_dir = {'':'src'},
@@ -32,6 +33,13 @@ setup(
             'power-scripts/*',
         ],
     },
+
+    classifiers = [
+        'Development Status :: 5 - Production/Stable',
+        'Operating System :: POSIX :: Linux',
+        'Programming Language :: Python',
+        'License :: OSI Approved :: GNU General Public License (GPL)',
+    ],
 
     entry_points = {
         'console_scripts': (
