--- a/LabController/rsyslog.d/beaker-lab-controller.conf
+++ b/LabController/rsyslog.d/beaker-lab-controller.conf
@@ -1,8 +1,8 @@
-if $programname == 'beaker-proxy' then /var/log/beaker/beaker-proxy.log
+if $programname == 'beaker-proxy' then /var/log/beaker/proxy.log
 & ~
-if $programname == 'beaker-watchdog' then /var/log/beaker/beaker-watchdog.log
+if $programname == 'beaker-watchdog' then /var/log/beaker/watchdog.log
 & ~
-if $programname == 'beaker-provision' then /var/log/beaker/beaker-provision.log
+if $programname == 'beaker-provision' then /var/log/beaker/provision.log
 & ~
-if $programname == 'beaker-transfer' then /var/log/beaker/beaker-transfer.log
+if $programname == 'beaker-transfer' then /var/log/beaker/transfer.log
 & ~
