systemd unit files for server and LC daemons
Also adds detach_process=True to all the daemons so that
they detach themselves during daemonizing regardless of whether
they are running under a service manager (init, systemd, etc)
or not.

Change-Id: I9e5325b03a2bfa3246b50ff3f2776f5a8bbc4c6a

--- a/LabController/setup.py.in
+++ b/LabController/setup.py.in
@@ -22,6 +22,10 @@ setup(
                   ('/etc/httpd/conf.d', ['apache/beaker-lab-controller.conf']),
                   ('/etc/rsyslog.d', ['rsyslog.d/beaker-lab-controller.conf']),
                   # /etc/logrotate.d/beaker is in Server but applies to LCs too
+                  ('/usr/lib/systemd/system',['systemd/beaker-proxy.service', 
+                                              'systemd/beaker-provision.service',
+                                              'systemd/beaker-watchdog.service',
+                                              'systemd/beaker-transfer.service']),
                   ('/var/run/beaker-lab-controller', []),
                   ('/var/lib/beaker', ['addDistro/addDistro.sh']),
                   ('/var/lib/beaker/addDistro.d', glob('addDistro/addDistro.d/*')),
