--- a/Server/setup.py.in
+++ b/Server/setup.py.in
@@ -157,6 +157,7 @@ data_files = \
     ("/etc/cron.d", ["cron.d/beaker"]),
     ("/etc/rsyslog.d", ["rsyslog.d/beaker-server.conf"]),
     ("/etc/logrotate.d", ["logrotate.d/beaker"]),
+    ('/usr/lib/systemd/system',['systemd/beakerd.service']),
     ("/usr/share/bkr", filter(os.path.isfile, glob.glob("apache/*.wsgi"))),
     ("/var/log/beaker", []),
     ("/var/www/beaker/logs", []),
