This adds a config item to enable/disable the implicit group job permissions.
Bug:1000861
Change-Id: Icf8e1e75870961c59d265d952efef0bc436276da

--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -35,7 +35,7 @@ beaker.max_running_commands = 10
 beaker.ks_meta = ''
 beaker.kernel_options = 'noverifyssl'
 beaker.kernel_options_post = ''
-
+beaker.deprecated_job_group_permissions.on = True
 #Set this to True to enable qpid testing
 beaker.qpid_enabled= False
 beaker.qpid_listen_to = ['beaker.service_queue', 'beaker.expired_watchdogs']
