--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -155,6 +155,9 @@ tg.url_scheme = "http"
 #beaker.kernel_options = "ksdevice=bootif"
 #beaker.kernel_options_post = ""
 
+# See BZ#1000861
+# beaker.deprecated_job_group_permissions.on = True
+
 # When generating MAC addresses for virtual systems, Beaker will always pick 
 # the lowest free address starting from this base address.
 #beaker.base_mac_addr = "52:54:00:00:00:00"
