access policies: use Twitter typeahead.js for groups and users
Change-Id: I95583da88aa60c255d4c41378b56a6c857c26f21

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "font-awesome"]
 	path = Server/assets/font-awesome
 	url = git://github.com/FortAwesome/Font-Awesome.git
+[submodule "typeahead.js"]
+	path = Server/assets/typeahead.js
+	url = https://github.com/twitter/typeahead.js.git
