use webassets for static assets
Change-Id: Ib980ea982d16a494c0e5df95e82d6f8ab215fc37

--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -11,6 +11,7 @@ RewriteRule   ^/bkr$  /bkr/   [R]
 
 Alias /static /usr/share/bkr/server/static
 Alias /bkr/static /usr/share/bkr/server/static
+Alias /bkr/assets /usr/share/bkr/server/assets
 Redirect permanent /bkr/apidoc http://beaker-project.org/docs/server-api
 Alias /logs /var/www/beaker/logs
 Alias /rpms /var/www/beaker/rpms
@@ -50,6 +51,12 @@ WSGIScriptAlias /bkr/ /usr/share/bkr/beaker-server.wsgi/bkr/
     </IfModule>
 </Directory>
 
+# Generated assets have a content hash in their filename so they can
+# safely be cached forever.
+<Directory /usr/share/bkr/server/assets/generated>
+    ExpiresActive on
+    ExpiresDefault "access plus 1 year"
+</Directory>
 
 # Authentication settings for kerberos logins..
 # Uncomment and customize for your environment
