--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -35,7 +35,7 @@ kid.encoding="utf-8"
 
 # List of Widgets to include on every page.
 # for example ['turbogears.mochikit']
-tg.include_widgets = ['turbogears.mochikit', 'bkr.server.widgets.jquery', 'bkr.server.widgets.local_datetime']
+tg.include_widgets = ['turbogears.mochikit', 'bkr.server.widgets.jquery', 'bkr.server.widgets.beaker_js', 'bkr.server.widgets.beaker_css']
 tg_mochikit.version = '1.4.2'
 
 # Set to True if the scheduler should be started
@@ -67,6 +67,10 @@ mail.utf8qp.on = True
 # CherryPy's autoreload mechanism is not compatible with other WSGI containers.
 #autoreload.package="bkr.server"
 autoreload.on = False
+
+# Assets configuration
+assets.debug = False
+assets.auto_build = False
 
 # compress the data sends to the web browser
 # [/]
