--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -93,6 +93,7 @@ basepath.logs='/var/www/beaker/logs'
 basepath.rpms='/var/www/beaker/rpms'
 basepath.repos='/var/www/beaker/repos'
 basepath.harness='/var/www/beaker/harness'
+basepath.assets='/usr/share/bkr/server/assets'
 
 # SERVER
 
