--- a/Tasks/distribution/beaker/setup/Makefile
+++ b/Tasks/distribution/beaker/setup/Makefile
@@ -43,14 +43,13 @@ export TEST=/$(TOPLEVEL_NAMESPACE)/$(PACKAGE_NAME)/$(RELATIVE_PATH)
 BUILT_FILES= 
 
 # data files, .c files, scripts anything needed to either compile the test and/or run it.
-FILES=$(METADATA) runtest.sh Makefile PURPOSE add-labcontroller.py
+FILES=$(METADATA) runtest.sh Makefile PURPOSE
 
 run: $(FILES) build
 	./runtest.sh
 
 build: $(BUILT_FILES)
 	chmod a+x ./runtest.sh
-	chmod a+x ./add-labcontroller.py
 
 clean:
 	rm -f *~ *.rpm $(BUILT_FILES)
@@ -78,7 +77,7 @@ $(METADATA): Makefile
 	@echo "Requires:     mysql-server" >> $(METADATA)  
 	@echo "Requires:     MySQL-python" >> $(METADATA)  
 	@echo "Requires:     autofs" >> $(METADATA)
-	@echo "Requires:     python-twill" >> $(METADATA)
+	@echo "Requires:     curl" >> $(METADATA)
 	@echo "Requires:     mod_ssl" >> $(METADATA)
 	@echo "Requires:     python-setuptools" >> $(METADATA)
 	@echo "Requires:     python-setuptools-devel" >> $(METADATA)
