--- a/Server/setup.py.in
+++ b/Server/setup.py.in
@@ -191,6 +191,7 @@ setup(
     data_files = data_files,
     packages = find_packages(),
     package_data={
+        'bkr.server.tests': ['unit-test.cfg'],
         'bkr.server.config': ['*.cfg'],
         'bkr.server.templates': ['*.kid'],
         'bkr.server': ['kickstarts/*', 'snippets/*', 'reporting-queries/*'],
