Updated pylint helpers
Change-Id: I8004abd676751fc01a7a41b7dc1ecde847620b02

--- a/Misc/pylint-errors.cfg
+++ b/Misc/pylint-errors.cfg
@@ -5,7 +5,9 @@
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+# The __requires__/import pkg_resources dance doesn't work here, since pylint
+# already imports pkg_resources while starting up
+init-hook='import sys; sys.path[0:0] =["/usr/lib/python2.6/site-packages/CherryPy-2.3.0-py2.6.egg/", "/usr/lib/python2.7/site-packages/CherryPy-2.3.0-py2.7.egg/"]'
 
 # Profiled execution.
 profile=no
@@ -33,7 +35,7 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=I,R,C,W,E1101,E1103
+disable=I,R,C,E1101,E1103
 # pylint gets confused by SQL Alchemy, so these two are too noisy until we
 # finish migrating to the SQL Alchemy declarative API
 # Once we get the pylint errors down, we can start looking into the warnings
