--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -162,6 +162,11 @@ tg.url_scheme = "http"
 # the lowest free address starting from this base address.
 #beaker.base_mac_addr = "52:54:00:00:00:00"
 
+# When generating RPM repos, we can configure what utility
+# to use. So far, only 'createrepo' and 'createrepo_c' have been
+# tested. See https://github.com/Tojaj/createrepo_c
+#beaker.createrepo_command = 'createrepo'
+
 # If carbon.address is set, Beaker will send various metrics to carbon 
 # (collection daemon for Graphite) at the given address. The address must be 
 # a tuple of (hostname, port).
