remove the requirement to set basepath.assets in server.cfg during upgrade
Change-Id: I4582b05e010154ee352e56f6fa30158c1d44651b

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -69,6 +69,7 @@ mail.utf8qp.on = True
 autoreload.on = False
 
 # Assets configuration
+basepath.assets = '/usr/share/bkr/server/assets'
 assets.debug = False
 assets.auto_build = False
 
