--- a/Server/dev.cfg
+++ b/Server/dev.cfg
@@ -55,5 +55,6 @@ tg.strict_parameters = True
 
 beaker.reliable_distro_tag = 'RELEASED'
 
+basepath.assets = './assets'
 assets.debug = False
 assets.auto_build = True
