tell git not to diff generated JS/CSS
The diffs of these are unreadable since they are minified and have no
line breaks.

Change-Id: If775ea886262389dd1aa4f74888650b69a05634a

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.txt   whitespace=-trailing-space
 *.rst   whitespace=-trailing-space
 /pub_doc/*/*/*.xml   whitespace=-trailing-space
+/Server/assets/generated/*.css -diff
+/Server/assets/generated/*.js -diff
