--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -35,6 +35,7 @@ beaker.max_running_commands = 10
 beaker.ks_meta = ''
 beaker.kernel_options = 'noverifyssl'
 beaker.kernel_options_post = ''
+basepath.assets = '../Server/assets'
 beaker.deprecated_job_group_permissions.on = True
 #Set this to True to enable qpid testing
 beaker.qpid_enabled= False
