allow client config to supply a custom CA certificate
Bug: 1009371
Change-Id: I4d7f8e43643a5441366b6f3832dbfa28378890db

--- a/Client/client.conf.example
+++ b/Client/client.conf.example
@@ -23,3 +23,7 @@ AUTH_METHOD = "password"
 
 # Kerberos credential cache file.
 #KRB_CCACHE = ""
+
+# SSL CA certificate to verify the Beaker server's SSL certificate.
+# By default, uses the system-wide CA certificate bundle.
+#CA_CERT = ""
