not using tito for tagging or building anymore
Also cleaned out unused Makefile targets and helper files.

Change-Id: I00f7d986870867845194e49219a7297cc1a33d84

--- a/.gitignore
+++ b/.gitignore
@@ -10,21 +10,16 @@ Server/assets/.webassets-cache/
 Server/build
 Server/build.out
 Server/devdata.sqlite
-Server/setup.py
 Server/bkr/server/static/.webassets-cache/
 Server/bkr/server/static/webassets-external/
-Common/bkr/common/__init__.py
 Common/build
-Common/setup.py
 Client/build
 Client/build.out
-Client/setup.py
 LabController/build
-LabController/setup.py
 IntegrationTests/build
-IntegrationTests/setup.py
 documentation/_build
 documentation/man/bkr-*.rst
 *.diff
 selenium.log
 /Tasks/distribution/beaker/dogfood/selenium-server-standalone-*.jar
+/rpmbuild-output/
