--- a/.gitignore
+++ b/.gitignore
@@ -9,19 +9,14 @@ Harness/build
 Server/build
 Server/build.out
 Server/devdata.sqlite
-Server/setup.py
-Common/bkr/common/__init__.py
 Common/build
-Common/setup.py
 Client/build
 Client/build.out
-Client/setup.py
 LabController/build
-LabController/setup.py
 IntegrationTests/build
-IntegrationTests/setup.py
 documentation/_build
 documentation/man/bkr-*.rst
 *.diff
 selenium.log
 /Tasks/distribution/beaker/dogfood/selenium-server-standalone-*.jar
+/rpmbuild-output/
