Digest auth for beaker-log-delete.
This change also replaces the 'log-delete' command with 'beaker-log-delete'

Bug: 968847
Change-Id: I522f1132d3142da82403e9825d0d2fa1c6c1cecb

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -167,6 +167,10 @@ tg.url_scheme = "http"
 # tested. See https://github.com/Tojaj/createrepo_c
 #beaker.createrepo_command = 'createrepo'
 
+# Uncomment these two options when using HTTP digest authentication.
+#beaker.log_delete_user = 'log-delete'
+#beaker.log_delete_password = 'examplepassword'
+
 # If carbon.address is set, Beaker will send various metrics to carbon 
 # (collection daemon for Graphite) at the given address. The address must be 
 # a tuple of (hostname, port).
