use Moment for datetime manipulation in JavaScript
Change-Id: Ic3ef1bea64d196d82f76be6c7ad1b6f8f538df9c

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "backbone"]
 	path = Server/assets/backbone
 	url = https://github.com/jashkenas/backbone.git
+[submodule "moment"]
+	path = Server/assets/moment
+	url = https://github.com/moment/moment.git
