compile assets during build, instead of committing them to git
Change-Id: I060cdd4ed6265d04bf87e415928019cc6a791abc

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ rpm-build
 *.bz2
 Harness/build
 Server/assets/.webassets-cache/
+Server/assets/.webassets-manifest
+Server/assets/generated/
 Server/build
 Server/build.out
 Server/devdata.sqlite
