enable assets auto_build when running tests locally
Change-Id: I08433e10d9384b4e426d4ed70822870d5c0896e7

--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -36,6 +36,7 @@ beaker.ks_meta = ''
 beaker.kernel_options = 'noverifyssl'
 beaker.kernel_options_post = ''
 basepath.assets = '../Server/assets'
+assets.auto_build = True
 beaker.deprecated_job_group_permissions.on = True
 #Set this to True to enable qpid testing
 beaker.qpid_enabled= False
