Auto generate subcommands form bkr man page
Change-Id: I8a427552b2dc13018d8c4f3b8606123755bb6f28

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ LabController/build
 IntegrationTests/build
 documentation/_build
 documentation/man/bkr-*.rst
+documentation/man/subcommands.rst
 *.diff
 selenium.log
 /Tasks/distribution/beaker/dogfood/selenium-server-standalone-*.jar
