request user confirmation before provisioning
Provisioning is a destructive operation (even more so than power
control, which we already require one or sometimes two JavaScript
confirmations for) so it warrants a confirmation dialog.

Change-Id: Iee48be9c16ee34f2515bdd059162ba8a325c7ddd

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,7 @@
 [submodule "URI.js"]
 	path = Server/assets/URI.js
 	url = https://github.com/medialize/URI.js.git
+[submodule "bootbox"]
+	path = Server/assets/bootbox
+	url = https://github.com/makeusabrew/bootbox.git
+	branch = v3.x
