use Growl-like notifications to indicate successful provision
This gives us a standard mechanism to indicate that an action has been
completed successfully, when there are no other changes in the UI to
indicate that a request was successful.

Change-Id: I78c2cfd7af502b12cd79b68642990ac41e9f5bee

--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 	path = Server/assets/bootbox
 	url = https://github.com/makeusabrew/bootbox.git
 	branch = v3.x
+[submodule "bootstrap-growl"]
+	path = Server/assets/bootstrap-growl
+	url = https://github.com/ifightcrime/bootstrap-growl.git
