don't mask build failures in Makefile
The pipe to tee was discarding the exit status from python setup.py
build which means that errors were ignored (although most errors would
trigger a proper failure later on during rpmbuild). The grep'ing for
ImportError stuff is obsolete anyway, since docs are now built
separately, so just remove the pipe entirely.

Change-Id: I0bf1752ec3f9c6346dea89b2f801da0f49820a01

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -4,12 +4,7 @@
 .PHONY: build
 build:
 	env PYTHONPATH=../Common$${PYTHONPATH:+:$$PYTHONPATH} \
-	    python setup.py build --install-data=/usr/share/ \
-	    | tee build.out
-	@if grep -q ImportError build.out ; then \
-	    echo "ImportErrors in build output, did Sphinx autodoc fail?" ; \
-	    exit 1 ; \
-	fi
+	    python setup.py build --install-data=/usr/share/
 
 .PHONY: install
 install: build
