update default panic regex to avoid false positives on "Oops"
Bug: 1040794
Change-Id: Idcc96b80d53981d117e0c6a765a20a37ae6b79ed

--- a/LabController/src/bkr/labcontroller/default.conf
+++ b/LabController/src/bkr/labcontroller/default.conf
@@ -14,4 +14,4 @@ CACHEPATH = "/var/www/beaker/logs"
 CONSOLE_LOGS = "/var/consoles"
 
 # Regex string to use to find panics
-PANIC_REGEX = "Kernel panic|Oops|general protection fault|general protection handler: wrong gs|\(XEN\) Panic"
+PANIC_REGEX = "Kernel panic|Oops: |general protection fault|general protection handler: wrong gs|\(XEN\) Panic"
