Add %check section to spec
Bug: 1067273
Change-Id: Ie14e9cbb8af98edc191291f1e84228ded4ab364a

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -56,6 +56,8 @@ install: man
 	install -m0644 _build/man/*.1 $(DESTDIR)/usr/share/man/man1
 	ln -s bkr-distro-trees-verify.1.gz $(DESTDIR)/usr/share/man/man1/bkr-distros-verify.1.gz
 
+.PHONY: check
+
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
 help:
