Run pylint when building a RPM
Change-Id: I5573272690353703e8ea719f180126830582917a

--- a/Client/Makefile
+++ b/Client/Makefile
@@ -21,3 +21,6 @@ clean:
 .PHONY: check
 check:
 	./run-tests.sh
+	env PYTHONPATH=../Common:src$${PYTHONPATH:+:$$PYTHONPATH} \
+	    pylint --disable=W --report=no --rcfile=../Misc/pylint-errors.cfg \
+	    bkr.client
