--- a/Common/Makefile
+++ b/Common/Makefile
@@ -27,3 +27,6 @@ clean:
 .PHONY: check
 check:
 	./run-tests.sh
+	env PYTHONPATH=.${PYTHONPATH:+:$PYTHONPATH} \
+	    pylint --disable=W --report=no --rcfile=../Misc/pylint-errors.cfg \
+	    bkr
