pylint: suppress some additional pylint false positives
Change-Id: I22848653924c69f3b57dee034009c5c51415beeb

--- a/Misc/pylint-errors.cfg
+++ b/Misc/pylint-errors.cfg
@@ -35,9 +35,9 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=I,R,C,E1101,E1103
-# pylint gets confused by SQL Alchemy, so these two are too noisy until we
-# finish migrating to the SQL Alchemy declarative API
+disable=I,R,C,E1101,E1103,E1002
+# pylint gets confused by SQLAlchemy so we disable E1101, E1103, and E1002
+# to keep the noise down.
 # Once we get the pylint errors down, we can start looking into the warnings
 
 
