--- a/Common/Makefile
+++ b/Common/Makefile
@@ -24,5 +24,6 @@ clean:
 	python setup.py clean
 	rm -rf build
 
-# There are no suitable tests to be run here.
 .PHONY: check
+check:
+	./run-tests.sh
