--- a/IntegrationTests/Makefile
+++ b/IntegrationTests/Makefile
@@ -17,6 +17,6 @@ clean:
 	python setup.py clean
 	rm -rf build
 
-# There are no suitable tests to be run here.
 .PHONY: check
-
+check:
+	# This package contains only integration tests, no unit tests.
