beaker-provision: copy pxelinux.0 into place on startup
This is just as a convenience to cover the most common type of system
(x86-based with BIOS firmware, including x86 VMs).

Updated the docs to indicate that the admin needs to install the right
boot images, with some suggestions on where to get the images. No longer
requiring or recommending Cobbler for this purpose.

Bug: 866765
Change-Id: Ic8d22ef699c70690b82299677d7ca80ed425d0eb

--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -16,6 +16,7 @@ PASSWORD = "testing"
 
 CACHEPATH = "/tmp/beaker-tests-lc-logs"
 CONSOLE_LOGS = "/tmp/beaker-tests-console-logs"
+TFTP_ROOT = "/tmp/beaker-tests-tftpboot"
 URL_DOMAIN = "localhost"
 RENEW_SESSION_INTERVAL= 10
 SLEEP_TIME = 5
