move TurboGears JS/CSS injection into master.kid
Currently this injection happens in the TurboGears-supplied default
sitetemplate (turbogears/view/templates/sitetemplate.kid). The problem
with that is any customised sitetemplates also need to duplicate the
same TurboGears-specific injection code.

We can move it into master.kid instead, and then the default
sitetemplate can just be empty.

Bug: 1012224
Change-Id: I63714533fdd82b98de4cab50eccb47419174470c

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -20,9 +20,9 @@ tg.defaultview = "kid"
 
 kid.encoding="utf-8"
 
-# The sitetemplate is used for overall styling of a site that
-# includes multiple TurboGears applications
-# tg.sitetemplate="<packagename.templates.templatename>"
+# Sites can apply a custom theme by setting tg.sitetemplate. The default 
+# sitetemplate is empty (meaning it adds nothing).
+tg.sitetemplate="bkr.server.templates.default_sitetemplate"
 
 # Allow every exposed function to be called as json,
 # tg.allow_json = False
