--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -79,7 +79,7 @@ assets.auto_build = False
 # gzip_filter.mime_types = ["application/x-javascript", "text/javascript", "text/html", "text/css", "text/plain"]
 
 beaker.bz_create_link = "https://bugzilla.redhat.com/enter_bug.cgi?product=Beaker"
-beaker.documentation_link = 'http://beaker-project.org/help.html'
+beaker.documentation_link = 'http://beaker-project.org/docs/'
 
 [/logs]
 static_filter.on = True
