build assets on application startup, instead of during the build
This will make it possible (in a subsequent commit) to augment the asset
sources by dropping new files in and/or setting a config option. That
way Beaker installations can add site-specific customisations without
having to rebuild Beaker's entire asset tree.

The asset building tools (uglify-js, ycssmin, lessc) are now runtime
requirements rather than build-time requirements.

We can also no longer be lazy and just install the generated/
subdirectory plus the .webassets-manifest file. Instead, we extract
a list of all required source files from the assets environment itself,
and use that during the package build to copy over the necessary files.

Ultimately the asset sources should not be bundled at all (Fedora now
requires this) but that is a longer term goal.

Bug: 1012224
Change-Id: Id8e2883269287a120236d52f0863e9ab0e7f4e4c

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,10 @@ rpm-build
 *.egg-info
 *.bz2
 Harness/build
-Server/assets/.webassets-cache/
-Server/assets/.webassets-manifest
-Server/assets/generated/
+Server/assets-cache/
 Server/build
 Server/build.out
 Server/devdata.sqlite
-Server/bkr/server/static/.webassets-cache/
-Server/bkr/server/static/webassets-external/
 Common/build
 Client/build
 Client/build.out
