--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -11,6 +11,7 @@ RewriteRule   ^/bkr$  /bkr/   [R]
 
 Alias /static /usr/share/bkr/server/static
 Alias /bkr/static /usr/share/bkr/server/static
+Alias /bkr/assets/generated /var/cache/beaker/assets
 Alias /bkr/assets /usr/share/bkr/server/assets
 Redirect permanent /bkr/apidoc http://beaker-project.org/docs/server-api
 Alias /logs /var/www/beaker/logs
@@ -51,9 +52,18 @@ WSGIScriptAlias /bkr/ /usr/share/bkr/beaker-server.wsgi/bkr/
     </IfModule>
 </Directory>
 
-# Generated assets have a content hash in their filename so they can
-# safely be cached forever.
-<Directory /usr/share/bkr/server/assets/generated>
+<Directory /var/cache/beaker/assets>
+    <IfModule mod_authz_core.c>
+        # Apache 2.4
+        Require all granted
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        # Apache 2.2
+        Order deny,allow
+        Allow from all
+    </IfModule>
+    # Generated assets have a content hash in their filename so they can
+    # safely be cached forever.
     ExpiresActive on
     ExpiresDefault "access plus 1 year"
 </Directory>
