--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -70,6 +70,7 @@ autoreload.on = False
 
 # Assets configuration
 basepath.assets = '/usr/share/bkr/server/assets'
+basepath.assets_cache = '/var/cache/beaker/assets'
 assets.debug = False
 assets.auto_build = False
 
