--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -36,6 +36,7 @@ beaker.ks_meta = ''
 beaker.kernel_options = 'noverifyssl'
 beaker.kernel_options_post = ''
 basepath.assets = '../Server/assets'
+basepath.assets_cache = '../Server/assets-cache'
 assets.auto_build = True
 beaker.deprecated_job_group_permissions.on = True
 #Set this to True to enable qpid testing
