--- a/Server/dev.cfg
+++ b/Server/dev.cfg
@@ -56,5 +56,6 @@ tg.strict_parameters = True
 beaker.reliable_distro_tag = 'RELEASED'
 
 basepath.assets = './assets'
+basepath.assets_cache = './assets-cache'
 assets.debug = False
 assets.auto_build = True
