port oVirt integration to OpenStack
Bug: 1040293
Change-Id: Iafe0d5586e70d3ecb548ffd1daadd5467bf7655c

--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -5,6 +5,7 @@ RewriteEngine on
 #RewriteCond %{REQUEST_URI} !^/repos/.* [NC]
 #RewriteCond %{REQUEST_URI} !^/harness/.* [NC]
 #RewriteCond %{REQUEST_URI} !^/kickstart/.* [NC]
+#RewriteCond %{REQUEST_URI} !/ipxe-script$ [NC]
 #RewriteCond %{HTTPS} off
 #RewriteRule ^/(.*) https://%{HTTP_HOST}%{REQUEST_URI}
 RewriteRule   ^/bkr$  /bkr/   [R]
