--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -188,11 +188,8 @@ tg.url_scheme = "http"
 # Set to True if the qpid broker requires krb authentication
 #beaker.qpid_krb_auth = False
 
-# Enable oVirt integration, for running recipes on dynamically created guests
-#ovirt.enabled = False
-#ovirt.api_url = 'https://manager.example.com:8443/api'
-#ovirt.username = 'admin@internal'
-#ovirt.password = ''
+# Use OpenStack for running recipes on dynamically created guests.
+#openstack.identity_api_url = 'https://openstack.example.com:5000/v2.0'
 
 [/logs]
 static_filter.on = True
