link to Horizon for OpenStack instances
Unfortunately the Horizon URL is not available from Keystone's Service
Catalog, so the admin has to manually configure it.

Bug: 1040239
Change-Id: I7c46e40794bd6d56a477735b80f3389fb0e8656c

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -190,6 +190,7 @@ tg.url_scheme = "http"
 
 # Use OpenStack for running recipes on dynamically created guests.
 #openstack.identity_api_url = 'https://openstack.example.com:5000/v2.0'
+#openstack.dashboard_url = 'https://openstack.example.com/dashboard/'
 
 [/logs]
 static_filter.on = True
