--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -38,6 +38,7 @@ beaker.kernel_options_post = ''
 basepath.assets = '../Server/assets'
 basepath.assets_cache = '../Server/assets-cache'
 assets.auto_build = True
+openstack.dashboard_url = 'http://openstack.example.invalid/dashboard/'
 beaker.deprecated_job_group_permissions.on = True
 #Set this to True to enable qpid testing
 beaker.qpid_enabled= False
