force text/plain for all logs named *.log
Bug: 1106412
Change-Id: I3eeec7fc216583f6a97abd5c7868d3f20e84cc73

--- a/LabController/apache/beaker-lab-controller.conf
+++ b/LabController/apache/beaker-lab-controller.conf
@@ -27,7 +27,7 @@ AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
         Order deny,allow
         Allow from all
     </IfModule>
-    <Files "console.log">
+    <Files "*.log">
         ForceType text/plain
     </Files>
 </Directory>
