--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -21,7 +21,7 @@ Alias /repos /var/www/beaker/repos
 Alias /harness /var/www/beaker/harness
 
 <Directory "/var/www/beaker/logs">
-    <Files "console.log">
+    <Files "*.log">
         ForceType text/plain
     </Files>
 </Directory>
