beaker-provision: enforce timeout for fetching distro tree images
A sane timeout is particularly important for fetching images because
when beaker-provision shuts down it waits for all commands to complete
normally, which means it will wait for the images to be fetched -- which
could take forever if no timeout is enforced and the server is
misbehaving.

Bug: 1094553
Change-Id: Iaff0313f88b12f1ce708fc0a1b3e85c1fe08dc32

--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -20,6 +20,7 @@ TFTP_ROOT = "/tmp/beaker-tests-tftpboot"
 URL_DOMAIN = "localhost"
 RENEW_SESSION_INTERVAL= 10
 SLEEP_TIME = 5
+IMAGE_FETCH_TIMEOUT = 2
 LOG_MAXBYTES = 2150
 LOG_BACKUPCOUNT=5
 
