--- a/LabController/src/bkr/labcontroller/default.conf
+++ b/LabController/src/bkr/labcontroller/default.conf
@@ -4,6 +4,9 @@ PROXY_PID_FILE = "/var/run/beaker-lab-controller/beaker-proxy.pid"
 # How long to sleep between polls.
 SLEEP_TIME = 20
 
+# Timeout for fetching distro images.
+IMAGE_FETCH_TIMEOUT = 120
+
 # How often to renew our session on the server
 RENEW_SESSION_INTERVAL = 300
 
