config option to disable bumping of priority for single-system recipes
Bug: 978904
Change-Id: I4eca275fd1afa4aed4330fb477e72aa9530b4e57

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -162,6 +162,10 @@ tg.url_scheme = "http"
 # the lowest free address starting from this base address.
 #beaker.base_mac_addr = "52:54:00:00:00:00"
 
+# Beaker increases the priority of recipes when it detects that they match only 
+# one candidate system. You can disable this behaviour here.
+#beaker.priority_bumping_enabled = True
+
 # When generating RPM repos, we can configure what utility
 # to use. So far, only 'createrepo' and 'createrepo_c' have been
 # tested. See https://github.com/Tojaj/createrepo_c
