move server man pages to section 8
Change-Id: I8f8241241daa9cd4cca002dba4ead0f1f61a21a7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -52,8 +52,9 @@ build: man text
 
 .PHONY: install
 install: man
-	install -m0755 -d $(DESTDIR)/usr/share/man/man1
+	install -m0755 -d $(DESTDIR)/usr/share/man/man{1,8}
 	install -m0644 _build/man/*.1 $(DESTDIR)/usr/share/man/man1
+	install -m0644 _build/man/*.8 $(DESTDIR)/usr/share/man/man8
 	ln -s bkr-distro-trees-verify.1.gz $(DESTDIR)/usr/share/man/man1/bkr-distros-verify.1.gz
 
 .PHONY: check
