datepicker for datetime fields in query builder
Change-Id: Ib9ff419a2302abf09b3e1c0f9551886f3899da39

--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 [submodule "bootstrap-growl"]
 	path = Server/assets/bootstrap-growl
 	url = https://github.com/ifightcrime/bootstrap-growl.git
+[submodule "bootstrap-datepicker"]
+	path = Server/assets/bootstrap-datepicker
+	url = https://github.com/eternicode/bootstrap-datepicker.git
