test automated schema migrations
Bug: 682030
Change-Id: Ic70cbcc2f63d99db011f43bd999163331582ccbb

--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -6,6 +6,10 @@
 sqlalchemy.dburi="mysql://beaker:beaker@localhost/beaker_test?charset=utf8"
 sqlalchemy.pool_recycle = 3600
 
+# Separate database used only for migration tests. This config setting does not 
+# exist in any other configs, it's only for tests.
+beaker.migration_test_dburi = 'mysql://beaker:beaker@localhost/beaker_migration_test?charset=utf8'
+
 basepath.rpms = '/tmp/beaker-tests-rpms'
 basepath.repos = '/tmp/beaker-tests-repos'
 basepath.logs = '/tmp/beaker-tests-logs'
