consolidate basepath defaults into app.cfg
This way we will always get the proper default value, even if a config
file doesn't specify the paths explicitly (for example in tests).

Change-Id: Iaac02de38d680514a9978bd51917a13101753881

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -68,6 +68,12 @@ mail.utf8qp.on = True
 #autoreload.package="bkr.server"
 autoreload.on = False
 
+# File Locations
+basepath.logs = '/var/www/beaker/logs'
+basepath.rpms = '/var/www/beaker/rpms'
+basepath.repos = '/var/www/beaker/repos'
+basepath.harness = '/var/www/beaker/harness'
+
 # Assets configuration
 basepath.assets = '/usr/share/bkr/server/assets'
 basepath.assets_cache = '/var/cache/beaker/assets'
