tidy up usages of /tmp in tests
Removed all hardcoded /tmp paths. There are a few things (like
basepath.harness) which we can't put in a dynamically created /tmp
directory, so they are moved to ./ when running tests from a git
checkout (with a corresponding .gitignore rule).

Also ensured that all temp files and directories are cleaned up. The
only gotcha is that the cleanup does not always happen if nose is
interrupted during a run.

The end result is that for a fully passing test run, nothing will be
left behind in /tmp.

Change-Id: Iff060ea5b45ca028af128fce98ac4e3b4b40782e

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ documentation/man/subcommands.rst
 selenium.log
 /Tasks/distribution/beaker/dogfood/selenium-server-standalone-*.jar
 /rpmbuild-output/
+/IntegrationTests/test-consoles/
+/IntegrationTests/test-harnessdir/
+/IntegrationTests/test-logs/
+/IntegrationTests/test-tftpboot/
+/IntegrationTests/test-repos/
+/IntegrationTests/test-rpms/
+/IntegrationTests/test-server-joblogs/
