--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -14,9 +14,9 @@ PASSWORD = "testing"
 # Kerberos realm. If commented, last two parts of domain name are used. Example: MYDOMAIN.COM.
 #KRB_REALM = "DOMAIN.COM"
 
-CACHEPATH = "/tmp/beaker-tests-lc-logs"
-CONSOLE_LOGS = "/tmp/beaker-tests-console-logs"
-TFTP_ROOT = "/tmp/beaker-tests-tftpboot"
+CACHEPATH = "./test-logs"
+CONSOLE_LOGS = "./test-consoles"
+TFTP_ROOT = "./test-tftpboot"
 URL_DOMAIN = "localhost"
 RENEW_SESSION_INTERVAL= 10
 SLEEP_TIME = 5
