--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -10,10 +10,10 @@ sqlalchemy.pool_recycle = 3600
 # exist in any other configs, it's only for tests.
 beaker.migration_test_dburi = 'mysql://beaker:beaker@localhost/beaker_migration_test?charset=utf8'
 
-basepath.rpms = '/tmp/beaker-tests-rpms'
-basepath.repos = '/tmp/beaker-tests-repos'
-basepath.logs = '/tmp/beaker-tests-logs'
-basepath.harness = '/tmp/beaker-tests-harness'
+basepath.rpms = './test-rpms'
+basepath.repos = './test-repos'
+basepath.logs = './test-server-joblogs'
+basepath.harness = './test-harnessdir'
 
 visit.token_secret_key = 'testkey'
 identity.ldap.enabled = True
