new suppressions for pylint 1.3
Change-Id: Id2413eb539bf7f17c52a97536271d10d138a1ef5

--- a/Misc/pylint-errors.cfg
+++ b/Misc/pylint-errors.cfg
@@ -35,10 +35,12 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=I,R,C,E1101,E1103,E1002
+disable=I,R,C,E1101,E1103,E1002,E0012
 # pylint gets confused by SQLAlchemy so we disable E1101, E1103, and E1002
 # to keep the noise down.
 # Once we get the pylint errors down, we can start looking into the warnings
+# E0012 is disabled to stop older pylint versions from complaining about
+# suppressions for error types only defined in newer pylint.
 
 
 [REPORTS]
